# default_cicd_public

./: .gitignore  CHANGELOG.md  README.md  distribute-dry.sh  distribute.sh  pyproject.toml
.github/workflows/: default_cicd_public.yml
src/default_cicd_public/: __init__.py  __init__conf__.py  __main__.py  entry.py
src/default_cicd_public/adapters/: __init__.py
src/default_cicd_public/adapters/cli/: __init__.py  constants.py  root.py
src/default_cicd_public/adapters/cli/commands/: distribute.py
src/default_cicd_public/adapters/filesystem/: __init__.py  copier.py  discovery.py
src/default_cicd_public/application/: __init__.py  ports.py
src/default_cicd_public/composition/: __init__.py
src/default_cicd_public/domain/: __init__.py  models.py
tests/: __init__.py  conftest.py  test_cli_distribute.py  test_copier.py  test_discovery.py
